<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聊了个天</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">密码</string>
    <string name="username">账号</string>
    <string name="remember">记住密码</string>
    <string name="login_button">登陆</string>
    <string name="register_button">注册</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string-array name="questions">
        <item>您的家乡在哪里？</item>
        <item>您的父亲叫什么名字？</item>
        <item>您的母亲叫什么名字？</item>
    </string-array>

    <string name="title_activity_gallery">GalleryActivity</string>

</resources>
