<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mychat.LoginActivity"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_weight="4.5"/>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_weight="3"
	    android:layout_height="fill_parent"
	   	android:orientation="vertical"
	   	android:layout_marginLeft="30px"
	   	android:layout_marginRight="30px">
	    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_weight="1"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal"
            android:layout_marginBottom="5dp"
		    android:background="@drawable/edit" >
		        <ImageView 
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="5"
		            android:id="@+id/username_ico"
		            android:src="@drawable/username"
		            android:scaleType="fitXY"/>	
		        <EditText 
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:hint="@string/username"
		            android:id="@+id/username"
		            android:background="@android:color/white"/>
		</LinearLayout>
	    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_weight="1"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal"
		    android:background="@drawable/edit">
		        <ImageView 
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="5"
		            android:src="@drawable/password"
		            android:scaleType="fitXY"/>	
		        <EditText 
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:hint="@string/password"
				    android:id="@+id/password"
				    android:background="@android:color/white"/>        
	    </LinearLayout>

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_weight="1"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal">
			<LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1">
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
                android:orientation="horizontal"
				android:paddingTop="20dp"
				android:weightSum="1">
				<CheckBox
					android:id="@+id/remember"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:checked="false"
					android:text="@string/remember"
					android:textSize="18sp" />
				<TextView
					android:id="@+id/foget_pwd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:layout_weight="2"
					android:text="忘记密码？"
					android:textAllCaps="false"
					android:textColor="@android:color/holo_blue_light"
					android:textSize="18sp" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_weight="1"
		    android:layout_height="fill_parent"
            android:paddingTop="15dp"
		    android:orientation="horizontal">
			<Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:onClick="login"
                android:text="@string/login_button" />
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:orientation="horizontal"></LinearLayout>
			<Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:onClick="register"
                android:text="@string/register_button" />

		</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_weight="4.5"
	    android:layout_height="fill_parent"/>
    </LinearLayout>

